<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="20dp"
                tools:ignore="UselessParent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    tools:ignore="UselessParent">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:visibility="visible"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="4dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="#2196F3"
                            android:orientation="vertical"
                            android:padding="16dp"
                            tools:ignore="UselessParent">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="20dp"
                                android:text="@string/textview2"
                                android:textColor="#FFFFFF"
                                android:textSize="26sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="18dp"
                                android:text="@string/textview3"
                                android:textColor="#DDDDDD"
                                android:textSize="16sp"
                                tools:ignore="TextContrastCheck" />
                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardview1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:visibility="visible"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="4dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="#788997"
                            android:orientation="vertical"
                            android:padding="16dp"
                            tools:ignore="UselessParent">

                            <TextView
                                android:id="@+id/textview11"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="20dp"
                                android:text="@string/textview11"
                                android:textColor="#FFFFFF"
                                android:textSize="26sp" />

                            <TextView
                                android:id="@+id/textview12"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/textview12"
                                android:textColor="#DDDDDD"
                                android:textSize="16sp"
                                tools:ignore="TextContrastCheck" />

                            <TextView
                                android:id="@+id/textview13"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/textview13"
                                android:textColor="#DDDDDD"
                                android:textSize="16sp"
                                tools:ignore="TextContrastCheck" />

                            <TextView
                                android:id="@+id/textview14"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/textview14"
                                android:textColor="#DDDDDD"
                                android:textSize="16sp"
                                tools:ignore="TextContrastCheck" />

                            <TextView
                                android:id="@+id/textview15"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/textview15"
                                android:textColor="#DDDDDD"
                                android:textSize="16sp"
                                tools:ignore="TextContrastCheck" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="20dp"
                                android:text="@string/textview16"
                                android:textColor="#FFFFFF"
                                android:textSize="26sp" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="horizontal">

                                <GridLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:columnCount="3"
                                    android:scrollbarStyle="insideInset">

                                    <Button
                                        android:id="@+id/button1"
                                        android:layout_width="0dp"
                                        android:layout_height="wrap_content"
                                        android:layout_columnWeight="1"
                                        android:layout_marginEnd="10dp"
                                        android:text="@string/button1"
                                        tools:ignore="TooDeepLayout,VisualLintButtonSize" />

                                    <Button
                                        android:id="@+id/button2"
                                        android:layout_width="0dp"
                                        android:layout_height="wrap_content"
                                        android:layout_columnWeight="1"
                                        android:layout_marginEnd="10dp"
                                        android:text="@string/button2"
                                        tools:ignore="VisualLintButtonSize" />

                                    <Button
                                        android:id="@+id/button3"
                                        android:layout_width="0dp"
                                        android:layout_height="wrap_content"
                                        android:layout_columnWeight="1"
                                        android:layout_marginEnd="10dp"
                                        android:text="@string/button3"
                                        tools:ignore="VisualLintButtonSize" />

                                    <Button
                                        android:id="@+id/button4"
                                        android:layout_width="0dp"
                                        android:layout_height="wrap_content"
                                        android:layout_columnWeight="1"
                                        android:layout_marginEnd="10dp"
                                        android:text="@string/button4"
                                        tools:ignore="VisualLintButtonSize" />

                                    <Button
                                        android:id="@+id/button5"
                                        android:layout_width="0dp"
                                        android:layout_height="wrap_content"
                                        android:layout_columnWeight="1"
                                        android:layout_marginEnd="10dp"
                                        android:text="@string/button5"
                                        tools:ignore="VisualLintButtonSize" />

                                    <Button
                                        android:id="@+id/button6"
                                        android:layout_width="0dp"
                                        android:layout_height="wrap_content"
                                        android:layout_columnWeight="1"
                                        android:layout_marginEnd="10dp"
                                        android:text="@string/button6"
                                        tools:ignore="VisualLintButtonSize" />

                                    <Button
                                        android:id="@+id/button7"
                                        android:layout_width="0dp"
                                        android:layout_height="wrap_content"
                                        android:layout_columnWeight="1"
                                        android:layout_marginEnd="10dp"
                                        android:text="@string/button7"
                                        tools:ignore="VisualLintButtonSize" />

                                    <Button
                                        android:id="@+id/button8"
                                        android:layout_width="0dp"
                                        android:layout_height="wrap_content"
                                        android:layout_columnWeight="1"
                                        android:layout_marginEnd="10dp"
                                        android:text="@string/button8"
                                        tools:ignore="VisualLintButtonSize" />

                                    <Button
                                        android:id="@+id/button9"
                                        android:layout_width="0dp"
                                        android:layout_height="wrap_content"
                                        android:layout_columnWeight="1"
                                        android:layout_marginEnd="10dp"
                                        android:text="@string/button9"
                                        tools:ignore="VisualLintButtonSize" />
                                </GridLayout>
                            </LinearLayout>

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="4dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="16dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:text="@string/app_name"
                                android:textSize="20sp"
                                android:textStyle="bold"
                                tools:ignore="TextContrastCheck" />

                            <TextView
                                android:id="@+id/textview4"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/textview4"
                                android:textSize="14sp"
                                tools:ignore="TextContrastCheck" />

                            <TextView
                                android:id="@+id/textview5"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/textview5"
                                android:textSize="14sp"
                                tools:ignore="TextContrastCheck" />

                            <TextView
                                android:id="@+id/textview6"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/textview6"
                                android:textSize="14sp"
                                tools:ignore="TextContrastCheck" />

                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>