<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity3">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="20dp"
                tools:ignore="UselessParent">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <TextView
                            android:id="@+id/welcome_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="20dp"
                            android:text="@string/textview7"
                            android:textSize="24sp" />

                        <TextView
                            android:id="@+id/sub_header_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="10dp"
                            android:text="@string/textview8"
                            android:textColor="#757575"
                            android:textSize="16sp" />

                        <EditText
                            android:id="@+id/cookie_input"
                            android:layout_width="match_parent"
                            android:layout_height="100dp"
                            android:layout_marginTop="20dp"
                            android:hint="@string/textview9"
                            android:importantForAutofill="no"
                            android:padding="10dp"
                            android:textColorHint="#757575"
                            tools:ignore="TextFields" />

                        <Button
                            android:id="@+id/get_verification_code_button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:layout_marginBottom="3dp"
                            android:padding="10dp"
                            android:text="@string/textview10"
                            tools:ignore="VisualLintButtonSize" />

                        <Button
                            android:id="@+id/get_llq_button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="1dp"
                            android:layout_marginBottom="30dp"
                            android:padding="10dp"
                            android:text="@string/textview17"
                            tools:ignore="VisualLintButtonSize" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>